配置文件加密&初始化入口整理